--- a/css/main.css
+++ b/css/main.css
@@ -10,12 +10,11 @@ body {
 }
 
 h1 {
-    font-size: /* x.xrem  (rem is a unit of measure) */;
     color: rgba(167, 53, 8, 0.678)/* #xxxxxx */;
 }
 
 h2 {
-    font-size: /* x.xrem */;
+   /* font-size:  x.xrem ;*/
     text-align: center;
     border-bottom: 3px solid rgba(167, 53, 8, 0.678);
 }
@@ -23,17 +22,17 @@ h2 {
 header, main, footer {
     margin: 1.55rem auto;
     padding: .5rem;
-    max-width: /* xxxpx (px = pixel is a unit of measure)  */;
+    /*max-width: /* xxxpx (px = pixel is a unit of measure)  ;*/
 }
 
 header, footer, footer a {
     text-align: center;
-    background-color: /* */;
+    background-color: teal;
     color: rgb(189, 85, 26);
 }
 
 header img {
-    width: /*  */;
+   
     height: 350px;
     float: right;
     border-radius: 28%;
@@ -41,6 +40,6 @@ header img {
 
 
     
-footer {
-    font-size: /* smaller */;
-}
+/*footer {
+         font-size: /* smaller */;
+/*}
