--- a/css/main.css
+++ b/css/main.css
@@ -6,17 +6,18 @@ body {
     font-size: 16px; 
     line-height: 32px;
     font-family: 'Times New Roman', Times, serif/* Ubuntu, sans-serif */;
-    color: rgba(167, 53, 8, 0.678)/* #xxxxxx */;
+    color: solid rgba(167, 53, 8, 0.884)/* #xxxxxx */;
+    background-color: rgba(31, 138, 226, 0.192)
 }
 
 h1 {
-    color: rgba(167, 53, 8, 0.678)/* #xxxxxx */;
+    color:rgb(167, 53, 8)/* #xxxxxx */;
 }
 
 h2 {
    /* font-size:  x.xrem ;*/
     text-align: center;
-    border-bottom: 3px solid rgba(167, 53, 8, 0.678);
+    border-bottom: 3px solid rgb(167, 53, 8);
 }
 
 header, main, footer {
@@ -27,8 +28,8 @@ header, main, footer {
 
 header, footer, footer a {
     text-align: center;
-    background-color: teal;
-    color: rgb(189, 85, 26);
+    background-color: rgb(6, 145, 145);
+    color:rgb(167, 53, 8);
 }
 
 header img {
