--- a/Cit230/lesson-4/styles/small-4.css
+++ b/Cit230/lesson-4/styles/small-4.css
@@ -1,6 +1,6 @@
 
 body {
-    background-color: #018B91;/*whole screen color */
+    background-color: #53C8CE;/*whole screen color */
     box-shadow: 0 0 10px #018B91;
 	text-align: center;
 	margin: 10px;
