--- a/Cit230/lesson-5/styles/small-5.css
+++ b/Cit230/lesson-5/styles/small-5.css
@@ -69,12 +69,14 @@ ul{
 footer{
 		background-color: purple;
 }
-    /* Colors   53C8CE
-                2CBAC1
-                018B91
-				016C71
+/*
+#344B93  dark
+#405EBA
+#637CCA
+#889CD8
+#AEBBE5   light
+*****
+#F2D9ED  light
 
-				107BEA
-				0E79E8
-				126CC9
-				286CB2
+
+*/
