--- a/Cit230/lesson-5/styles/large-5.css
+++ b/Cit230/lesson-5/styles/large-5.css
@@ -1,11 +1,11 @@
 @media screen and (min-width: 501px) {
     
 body {
-    color :black;
+    color :rgb(238, 215, 198);
     }
     a {
         text-decoration: none;
-    }
+    }}
 .menu{
     display: none;
     }
