--- a/Cit230/lesson-5/styles/large-5.css
+++ b/Cit230/lesson-5/styles/large-5.css
@@ -6,9 +6,10 @@ body {
     a {
         text-decoration: none;
     }}
-.menu{
+/*.menu{
     display: none;
     }
+    */
     ul {
         list-style-type: none;
         margin: 0;
