--- a/Cit230/lesson-5/styles/small-5.css
+++ b/Cit230/lesson-5/styles/small-5.css
@@ -1,5 +1,5 @@
 
-@media screen and (max-width: 400px){
+@media screen and (max-width: 360px){
 .forecast {
 	display: none;
 }
@@ -11,6 +11,29 @@ body {
 }
 ul {
 	list-style-type: none;
+	text-align:center;
+	margin:40px auto;   
+	margin: 0;
+    padding: 0;
+    overflow: hidden;
+	/*width: 800px;
+	max-width: 500px;
+	*/
+	margin: 1px auto;
+	 text-align: center;
+	
+		background-color: rgb(243, 166, 78)	
+}
+		li {
+        display: none;
+			list-style-type: none;
+			float: left;
+			min-width: 1px;
+		  }    
+		
+		  .forecast {
+			  display:block;
+		  }
   }
 a {
 	text-decoration: none;
@@ -67,18 +90,13 @@ header img, .headings {
 }
 
 h1 {
-    margin: 1px auto;
+   
 	background-color:floralwhite;
-	text-align: center;
+	 margin: 1px auto;
+	 text-align: center;
 	font-family: 'Ubuntu', sans-serif
 }
 
-ul{
-	text-align:center;
-	margin:40px auto;
-	background-color: rgb(243, 166, 78)
-	
-}
 
 footer{
 		background-color: rgb(199, 94, 23);
